// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders and matches with snaphot 1`] = `
<DocumentFragment>
  <div
    class="Home"
  >
    <h1>
      Jobly
    </h1>
    <p>
      Find yourself a job
    </p>
    <h2>
      Welcome, testuser!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`it renders and matches with snaphot 2`] = `
<DocumentFragment>
  <div
    class="Home"
  >
    <h1>
      Jobly
    </h1>
    <p>
      Find yourself a job
    </p>
    <p>
      <a
        href="/login"
      >
        Login
      </a>
      <a
        href="/signup"
      >
        Sign Up
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`it renders and matches with snaphot 3`] = `
<DocumentFragment>
  <div
    class="Home"
  >
    <h1>
      Jobly
    </h1>
    <p>
      Find yourself a job
    </p>
    <h2>
      Welcome, testuser!
    </h2>
  </div>
</DocumentFragment>
`;
